# eumetsat-archive-watchtower

./: .env.example  .gitignore  pyproject.toml
docs/: SESSION_LOG.md
src/watchtower/: api.py  cli.py  collector.py  config.py  detector.py  eumdac_client.py  logging_setup.py  metrics.py  models.py  storage.py
tests/: conftest.py  test_collector.py  test_config.py  test_detector.py  test_smoke.py  test_storage.py
