[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchtower"
version = "0.1.0"
description = "Monitoring and anomaly detection for the EUMETSAT Data Store via EUMDAC."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Ese", email = "noguese.paul@gmail.com" }]
keywords = ["eumetsat", "eumdac", "monitoring", "earth-observation"]

dependencies = [
  "eumdac>=3.0.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "tenacity>=9.0",
  "typer>=0.13",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2", 
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
]

[project.scripts]
watchtower = "watchtower.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/watchtower"]
